Done with the ApI Project

--- a/MyPlaylistApi/appsettings.json
+++ b/MyPlaylistApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "MyPlaylistDBConnection": "Server =(local)\\sqlexpress;database=MyPlaylistApiDBv1;Trusted_Connection=true"
+  },
+  "APIKeys": {
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
